# WatchParty

./: .gitignore  README.md  db.py  main.py  pyproject.toml
extension/: injection.js  manifest.json  popup.html  popup.js
static/: script.js
web/: index.html  stats_header.html
